--- a/build.gradle
+++ b/build.gradle
@@ -15,6 +15,15 @@ buildscript {
     }
 }
 
+apply plugin: 'idea'
+
+idea {
+    module {
+        // For some reason this is necessary for IDEA 2014 workspaces to recognize assets
+        inheritOutputDirs = true
+    }
+}
+
 apply plugin: 'forge'
 
 version = "1.0"
